--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-app-rewired": "^2.0.3",
     "react-dom": "^16.7.0",
