--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@axetroy/react-github-calendar": "^2.0.0",
     "@types/react": "^16.8.1",
     "antd": "^3.13.1",
     "customize-cra": "^0.2.11",
