--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@types/react": "^16.8.1",
+    "animate.css": "^3.7.0",
     "antd": "^3.13.1",
     "customize-cra": "^0.2.11",
     "less": "^3.9.0",
@@ -12,8 +13,10 @@
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-app-rewired": "^2.0.3",
     "react-dom": "^16.7.0",
+    "react-particles-js": "^2.6.0",
     "react-scripts": "2.1.3"
   },
   "scripts": {
