--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@types/react": "^16.8.1",
     "animate.css": "^3.7.0",
     "antd": "^4.6.4",
