--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-resume",
   "homepage": "http://tramtran2496.github.io/my-resume",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
@@ -11,14 +11,14 @@
     "customize-cra": "^0.2.11",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^6.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-app-rewired": "^2.0.3",
     "react-dom": "^16.7.0",
     "react-particles-js": "^2.6.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
