--- a/package.json
+++ b/package.json
@@ -4,21 +4,20 @@
   "version": "0.2.3",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.2.2",
-    "@types/react": "^16.8.1",
-    "animate.css": "^3.7.0",
-    "antd": "^4.6.4",
-    "customize-cra": "^0.2.11",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "node-sass": "^6.0.1",
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-animate-on-scroll": "^2.1.5",
-    "react-app-rewired": "^2.0.3",
-    "react-dom": "^16.7.0",
-    "react-particles-js": "^2.6.0",
-    "react-scripts": "^4.0.3"
+    "@ant-design/icons": "^5.0.1",
+    "@types/react": "^18.2.0",
+    "animate.css": "^4.1.1",
+    "antd": "^5.4.6",
+    "customize-cra": "^1.0.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "node-sass": "^8.0.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
+    "react-app-rewired": "^2.2.1",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -37,8 +36,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "babel-plugin-import": "^1.11.0",
-    "gh-pages": "^2.0.1",
-    "terser": "^3.14.1"
+    "babel-plugin-import": "^1.13.6",
+    "gh-pages": "^5.0.0",
+    "terser": "^5.17.1"
   }
 }
